# MasicSquare_19

./: .cursorrules  .gitignore  README.md  pyproject.toml
Prompt/: 01_Magic_Square_Problem_Definition_Prompt.md  03_(Prompt)Cursor_Rules.md  06_Magic_Square_Repository_Documentation_Export_Prompt.md  07_(Prompt)Test_Case_Specification.md  08_(Prompt)Implementation_and_Coverage_Update.md  09_(Prompt)Refactoring_analysis_report.md
Prompting/: 02_Magic_Square_Dual_Track_Clean_Architecture_Design_Prompt.md  04_Magic_Square_Epic_to_Technical_Scenarios-Prompt.md  05_Magic_Square_PRD_Prompt.md
Report/: 01_(Report)Problem_Definition.md  02_(Report)Dual_Track_Clean_Architecture_Design.md  03_Magic_Square_Cursor_Rules_Report.md  04_Magic_Square_Epic_to_Technical_Scenarios.md  05_Magic_Square_PRD_Report.md  06_(Report)Repository_Documentation_Export.md  06_Magic_Square_Repository_Documentation_Export_Report.md  07_(Report)Test_Case_Specification.md  08_(Report)Implementation_and_Coverage_Update.md  09_(Report)Refactoring_analysis_report.md
docs/: MasicSquare_Implementation_TODO.md  PRD.md  Test_Case_Specification_Form.md
magicsquare/: __init__.py  boundary.py  constants.py  domain.py
magicsquare/gui/: __init__.py  __main__.py  window.py
scripts/: run_tests.ps1
tests/: test_magic_contract_solver.py  test_red_failure_demo.py  test_red_l01_u01.py  test_u_red_02_empty_count.py
