[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magicsquare"
version = "0.1.0"
description = "4×4 Magic Square — TDD / Clean Architecture exercise"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
gui = ["PyQt6>=6.5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["magicsquare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Verbose per test + traceback on failure + summary of fails/errors/xfail at end (easy RED verification).
addopts = "-v --tb=short -ra"

# Coverage: HTML report dir ``htmlcov/index.html`` (pytest-cov / coverage.py).
[tool.coverage.run]
source = ["magicsquare"]
branch = true

[tool.coverage.html]
directory = "htmlcov"
